--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "@typerhext/js",
   "version": "0.0.1",
   "description": "THML.js",
-  "main": "dist/thml.min.js",
+  "main": "dist/main.js",
+  "module": "dist/main.mjs",
+  "types": "dist/main.d.ts",
   "scripts": {
-    "test": "mocha"
+    "test": "jest",
+    "build": "tsup",
+    "lint": "eslint src tests"
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,21 @@
     "THML"
   ],
   "author": "Leonard Lesinski",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@types/jest": "^29.5.12",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
+    "terser": "^5.31.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "tsup": "^8.0.2",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.9.0"
+  }
 }
